<resources>

    <string name="app_name">Close Connect</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="create_a_story">Create a story</string>
    <string name="deepak_chourasiya">Deepak Chourasiya</string>
    <string name="deepak">Deepak</string>
    <string name="engineer_rapper_dancer_song_writer">Engineer, Rapper, Dancer, Song-Writer</string>
    <string name="_985k">985k</string>
    <string name="_120k">120k</string>
    <string name="_80k">80k</string>
    <string name="android_developer_engineer">Android Developer, Engineer</string>

</resources>